# DeMedia

./: .gitignore  CONTRACT_INTEGRATION.md  Cargo.toml  README.md  render.yaml
.github/workflows/: ci.yml
backend/: .gitignore  nodemon.json  package-lock.json  package.json  tsconfig.json
backend/src/: app.ts  constants.ts  contract-integration.ts  index.ts
backend/src/__tests__/: stellarError.test.ts
backend/src/controllers/: nft.Controller.ts  search.Controller.ts  tx.Controller.ts  user.Controller.ts  (+1 more)
contracts/access_control/: Cargo.toml
contracts/content_nft/: Cargo.toml
contracts/content_registry/: Cargo.toml
contracts/payment_escrow/: Cargo.toml
contracts/royalty_manager/: Cargo.toml
contracts/subscription_manager/: Cargo.toml
docs/: ARCHITECTURE.md  USER_FEEDBACK.md
frontend/: .env.example  DEPLOY_VERCEL.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: animated-background.tsx  background-fault.tsx  brand-lockup.tsx  feature-shell.tsx  floating-orbs-background.tsx  futuristic-navbar.tsx  identity-matrix-background.tsx  loading-animation.tsx  network-toggle.tsx  orbit-background.tsx  parallax-orb-background.tsx  site-footer.tsx  wave-grid-background.tsx
frontend/hooks/: use-lenis.ts
frontend/lib/: auth-context.tsx  backend-url.ts  cache.ts  errors.ts  media.ts  network-store.ts  wallet-kit.ts
scripts/: build.sh  deploy-mainnet.ps1  deploy-testnet.sh  deploy.sh  push-changes.sh  test.sh
(+59 files in other folders)
